@@ -7,7 +7,7 @@ Use 'typing.Callable' instead.
 # pylint: disable=missing-docstring,unsubscriptable-object
 import collections.abc
 from collections.abc import Callable
-from typing import Optional, Union
+from typing import TYPE_CHECKING, Optional, Union
 
 Alias1 = Optional[Callable[[int], None]]  # [broken-collections-callable]
 Alias2 = Union[Callable[[int], None], None]  # [broken-collections-callable]
@@ -16,6 +16,10 @@ Alias3 = Optional[Callable[..., None]]
 Alias4 = Union[Callable[..., None], None]
 Alias5 = list[Callable[..., None]]
 Alias6 = Callable[[int], None]
+
+if TYPE_CHECKING:
+    # ok inside TYPE_CHECKING block
+    Alias7 = Optional[Callable[[int], None]]
 
 
 def func1() -> Optional[Callable[[int], None]]:  # [broken-collections-callable]
