@@ -11,7 +11,7 @@ not in a type annotation context.
 from __future__ import annotations
 
 import typing
-from typing import Callable, NoReturn, Union
+from typing import TYPE_CHECKING, Callable, NoReturn, Union
 
 import typing_extensions
 
@@ -35,3 +35,7 @@ def func5() -> Union[None, typing_extensions.NoReturn]:
 Alias1 = NoReturn
 Alias2 = Callable[..., NoReturn]  # [broken-noreturn]
 Alias3 = Callable[..., "NoReturn"]
+
+if TYPE_CHECKING:
+    # ok inside TYPE_CHECKING block
+    Alias4 = Callable[..., NoReturn]
