@@ -8,7 +8,7 @@ Don't emit errors if py-version set to >= 3.7.2.
 """
 # pylint: disable=missing-docstring
 import typing
-from typing import Callable, NoReturn, Union
+from typing import TYPE_CHECKING, Callable, NoReturn, Union
 
 import typing_extensions
 
@@ -32,3 +32,7 @@ def func5() -> Union[None, typing_extensions.NoReturn]:
 Alias1 = NoReturn
 Alias2 = Callable[..., NoReturn]
 Alias3 = Callable[..., "NoReturn"]
+
+if TYPE_CHECKING:
+    # ok inside TYPE_CHECKING block
+    Alias4 = Callable[..., NoReturn]
